fix reservation button in rooms page

--- a/frontend/src/app/frontend/components/home/home.component.html
+++ b/frontend/src/app/frontend/components/home/home.component.html
@@ -50,7 +50,7 @@
           king-size bed.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img-lg featurette-image img-fluid" src="assets/img/kamer_lux.jpg"
+        <img class="bd-placeholder-img-lg featurette-image img-fluid" src="assets/img/room_luxury.jpg"
              style="width:500; height:500; background:#eee; color:#aaa;">
       </div>
     </div>
