--- a/frontend/src/app/frontend/components/kamers/kamers.component.html
+++ b/frontend/src/app/frontend/components/kamers/kamers.component.html
@@ -1,317 +1,13 @@
-
 <main role="main">
-<div class="row">
-  <div class="col-lg-12">
-    <ngb-carousel *ngIf="images">
-      <ng-template ngbSlide>
-        <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="carousel-caption">
-          <h3>LUXE KAMERS</h3>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="carousel-caption">
-          <h3>STANDAARD KAMERS</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="carousel-caption">
-          <h3>BUDGET KAMERS</h3>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
-        </div>
-      </ng-template>
-    </ngb-carousel>
-  </div>
-</div>
 
-  <div>
-    <br>
-  </div>
-  <div class="container marketing">
+<frontend-carousel-item [roomlist]="roomlist"></frontend-carousel-item>
 
-    <!-- Three columns of text below the carousel -->
+<br>
+  <div class="container">
     <div class="row">
-      <div class="col-lg-4">
-        <img class="rounded-circle ml-4 d-block w-100" src="assets/img/thumb_kamer_budget.jpg" margin=auto>
-        <h2 class="text-center h2-kamer">Budget</h2>
-        <h5 class="text-center h2-kamer">Vanaf € 35,-</h5>
-        <p>Een warme en stijlvolle hotelkamer met eigen balkon. De kamer beschikt over een bureau,
-          flatscreen televisie en een radio. De badkamer is ingericht met een douche in bad, toilet en
-          föhn.</p>
-        <br>
-        <!--p><a class="btn btn-secondary" href="#" role="button">Reserveren &raquo;</a></p-->
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col-8">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Reserveer</button>
-          </div>
-        </div>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class="rounded-circle ml-4 d-block w-100" src="assets/img/thumb_kamer_standaard.jpg" margin=auto>
-        <h2 class="text-center h2-kamer">Standaard</h2>
-        <h5 class="text-center h2-kamer">Vanaf € 50,-</h5>
-        <p>De ruime suite beschikt over een apart zitgedeelte en balkon met uitzicht op het bos. De
-          hotelkamer
-          beschikt over koffie- en theefaciliteiten, een badkamer met douche in bad en toilet.</p>
-        <!--p><a class="btn btn-secondary" href="#" role="button">Reserveren &raquo;</a></p-->
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col-8">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Reserveer</button>
-          </div>
-        </div>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class="rounded-circle ml-4 d-block w-100" src="assets/img/thumb_kamer_lux.jpg" margin=auto>
-        <h2 class="text-center h2-kamer">Luxe</h2>
-        <h5 class="text-center h2-kamer">Vanaf € 65,-</h5>
-        <p>Een ruim ingerichte kamer met terras. Voorzien van een bureau, flatscreen televisie en radio.
-          De kamer beschikt over koffie en theefaciliteiten. In de badkamer tref je een douche in bad,
-          toilet en föhn.</p>
-        <!--p><a class="btn btn-secondary" href="#" role="button">Reserveren &raquo;</a></p-->
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col-8">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Reserveer</button>
-          </div>
-        </div>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-
-    <!-- START THE FEATURETTES -->
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading h2-kamer-lg">Budget kamer<span class="text-muted"></span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
-          felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-          dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5">
-        <img class="bd-placeholder-img-lg featurette-image img-fluid" src="assets/img/kamer_budget.jpg" style="width:500; height:500; background:#eee; color:#aaa;">
-      </div>
+      <frontend-rounded-circle-item class="col-lg-4" *ngFor="let roomdetail of roomlist" [roomdetail]="roomdetail" [siteLanguage]="nl"></frontend-rounded-circle-item>
     </div>
-
+    <frontend-featurette-item *ngFor="let roomdetail of roomlist" [roomdetail]="roomdetail"></frontend-featurette-item>
     <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading h2-kamer-lg">Standaard kamer <span class="text-muted"></span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
-          felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-          dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img-lg featurette-image img-fluid" src="assets/img/kamer_standaard.jpg" style="width:500; height:500; background:#eee; color:#aaa;">
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading h2-kamer-lg">Luxe kamer <span class="text-muted"></span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
-          felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-          dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5">
-        <img class="bd-placeholder-img-lg featurette-image img-fluid" src="assets/img/kamer_lux.jpg" style="width:500; height:500; background:#eee; color:#aaa;">
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <!-- /END THE FEATURETTES -->
-
-  </div><!-- /.container -->
-
-  <!-- Beschikbaarheid Modal -->
-  <div class="modal fade" id="beschikbaarheidmodal" tabindex="-1" role="dialog" aria-labelledby="beschikbaarheidLabel"
-       aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="beschikbaarheidLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#examplemodal">Controleer
-            beschikbaarheid</button>
-        </div>
-      </div>
-    </div>
   </div>
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-       aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Kamer reserveren</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="firstname">Voornaam</label>
-                <input type="text" class="form-control" id="firstname" placeholder="Voornaam">
-              </div>
-              <div class="form-group col-md-6">
-                <label for="lastname">Achternaam</label>
-                <input type="email" class="form-control" id="lastname" placeholder="Achternaam">
-              </div>
-
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-12">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputAdress">Adres</label>
-                <input type="text" class="form-control" id="inputAdress" placeholder="Straat en huisnummer">
-              </div>
-              <div class="form-group col-md-3">
-                <label for="inputZip">Postcode</label>
-                <input type="text" class="form-control" id="inputZip" placeholder="Postcode">
-              </div>
-              <div class="form-group col-md-3">
-                <label for="inputCity">Woonplaats</label>
-                <input type="text" class="form-control" id="inputCity" placeholder="Woonplaats">
-              </div>
-            </div>
-
-            <div class="container, form-row">
-              <div class='col-md-6'>
-                <label for="inputDateFrom">Vanaf</label>
-                <div class="form-group">
-                  <div class='input-group date' id='datetimepicker6'>
-
-                    <input type='date' class="form-control" />
-                    <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                            </span>
-                  </div>
-                </div>
-              </div>
-              <div class='col-md-6'>
-                <label for="inputDateTo">Tot</label>
-                <div class="form-group">
-                  <div class='input-group date' id='datetimepicker7'>
-                    <input type='date' class="form-control" />
-                    <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                            </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-row">
-              <div class="col-auto my-1">
-                <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Aanta personen</label>
-                <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                  <option selected>Kies aantal personen</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                </select>
-              </div>
-            </div>
-
-            <fieldset class="form-group">
-              <div class="row">
-                <legend class="col-form-label col-sm-2 pt-0">Logies</legend>
-                <div class="col-sm-10">
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
-                           value="option1" checked>
-                    <label class="form-check-label" for="gridRadios1">
-                      Ontbijt
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
-                           value="option2">
-                    <label class="form-check-label" for="gridRadios2">
-                      Half pension
-                    </label>
-                  </div>
-                  <div class="form-check disabled">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3"
-                           value="option3" disabled>
-                    <label class="form-check-label" for="gridRadios3">
-                      Vol pension
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </fieldset>
-            <div class="form-group row">
-              <div class="col-sm-2">Kinderbed</div>
-              <div class="col-sm-10">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="gridCheck1">
-                  <label class="form-check-label" for="gridCheck1">
-                    Ja/Nee
-                  </label>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                <label class="form-check-label" for="invalidCheck">
-                  Akkoord met de algemene voorwaarden
-                </label>
-                <div class="invalid-feedback">
-                  You must agree before submitting.
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="col-sm-6">Belangrijke Informatie:</div>
-              <ul class="important_info">
-                <li>Parkeren is gratis</li>
-                <li>Gratis wifi in het hotel</li>
-                <li>Inchecken vanaf 14:00 uur</li>
-                <li>Uitchecken tot 12:00 uur</li>
-                <li>Kosteloos annuleren op dag van aankomst tot 12.00 uur. Met uitzondering van
-                  non-refundable en earlybird tarieven.</li>
-              </ul>
-            </div>
-
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
-          <button type="button" class="btn btn-primary">Versturen</button>
-        </div>
-      </div>
-    </div>
-  </div>
+</main>
