--- a/frontend/src/app/frontend/shared/components/gast-kamerreservering/gast-kamerreservering.component.html
+++ b/frontend/src/app/frontend/shared/components/gast-kamerreservering/gast-kamerreservering.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">Reserveren: <i>{{kamernaam}}</i></h4>
+  <h4 class="modal-title" id="modal-basic-title">Reserveren: <i>{{kamertype}}</i></h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -16,6 +16,15 @@
         <label>Vertrek datum</label>
         <input type="date" class="form-control" formControlName="datumtot" [class.is-invalid]="kamerreserveringForm.controls.datumtot.invalid && kamerreserveringForm.controls.datumtot.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.datumtot.valid || kamerreserveringForm.controls.datumtot.untouched">Vereist</small>
+      </div>
+    </div>
+    <div class="container, form-row">
+      <div class="form-group col-md-12">
+        <label>Selecteer een kamer</label>
+        <select class="form-control" formControlName="kamernaam" [class.is-invalid]="kamerreserveringForm.controls.kamernaam.invalid && kamerreserveringForm.controls.kamernaam.touched" ngbAutofocus >
+          <option *ngFor="let kamer of (kamers | async)" [value]="kamer">{{kamer.kamerNaam}}</option>
+        </select>
+        <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.kamernaam.valid || kamerreserveringForm.controls.kamernaam.untouched">Vereist</small>
       </div>
     </div>
     <div class="container, form-row">
@@ -72,6 +81,9 @@
         <input type="text" class="form-control" placeholder="Nederland" formControlName="land" [class.is-invalid]="kamerreserveringForm.controls.land.invalid && kamerreserveringForm.controls.land.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.land.valid || kamerreserveringForm.controls.land.untouched">Vereist</small>
       </div>
+    </div>
+    <div class="form-group">
+        <input type="hidden" value="none" class="form-control" formControlName="identiteitsid" [class.is-invalid]="kamerreserveringForm.controls.identiteitsid.invalid && kamerreserveringForm.controls.identiteitsid.touched" ngbAutofocus />
     </div>
     <div class="form-group">
       <input type="hidden" class="form-control" value="{{kamernaam}}" formControlName="kamernaam">
