fix: kamerreservering goed opgeslagen

--- a/frontend/src/app/frontend/shared/components/carousel/carousel.component.html
+++ b/frontend/src/app/frontend/shared/components/carousel/carousel.component.html
@@ -4,7 +4,7 @@
       <ng-template ngbSlide  *ngFor="let roomdetail of roomlist">
         <img [src]="roomdetail.carouselimage" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption">
-          <h3>{{roomdetail.roomtype}}</h3>
+          <h3>{{roomdetail.roomtypefull}}</h3>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <frontend-reservation-button-item [roomdetail]="roomdetail"></frontend-reservation-button-item>
         </div>
