--- a/frontend/src/app/frontend/shared/components/featurette/featurette.component.html
+++ b/frontend/src/app/frontend/shared/components/featurette/featurette.component.html
@@ -2,7 +2,7 @@
   <hr class="featurette-divider">
   <div class="row featurette">
     <div class="{{roomdetail.alignText}}">
-      <h2 class="featurette-heading h2-kamer-lg">{{roomdetail.roomtype}}, {{roomdetail.roomprice}}<span class="text-muted"></span></h2>
+      <h2 class="featurette-heading h2-kamer-lg">{{roomdetail.roomtypefull}}, {{roomdetail.roomprice}}<span class="text-muted"></span></h2>
       <p class="lead">{{roomdetail.text}}</p>
     </div>
     <div ngClass="{{roomdetail.alignImage}}">
