--- a/frontend/src/app/frontend/shared/components/reservation-button/reservation-button.component.html
+++ b/frontend/src/app/frontend/shared/components/reservation-button/reservation-button.component.html
@@ -1,1 +1,1 @@
-  <button type="button" class="btn btn-primary" (click)="openFormKamerReserveringModal(roomdetail.roomtype)" data-toggle="modal" data-target="#exampleModal" >Reserveer</button>
+  <button type="button" class="btn btn-primary" (click)="openFormKamerReserveringModal(roomdetail)" data-toggle="modal" data-target="#exampleModal" >Reserveer</button>
