--- a/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamersbeschikbaar/form-kamersbeschikbaar.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamersbeschikbaar/form-kamersbeschikbaar.component.html
@@ -15,7 +15,7 @@
           <div class="form-group col-md-6">
 
               <label>Vertrek datum</label>
-              <input type="date" class="form-control" [min]="today" [value]="tomorrow" formControlName="datumtot" ngbAutofocus/>
+              <input type="date" class="form-control" [min]="kamerSearchForm.controls.datumvan.value" [value]="tomorrow" formControlName="datumtot" ngbAutofocus/>
 
 
           </div>
