--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
@@ -1,43 +1,51 @@
 <div class="d-flex justify-content-end mt-2">
-  <button class="btn btn-primary mt-2" (click)="openFormActiviteitModal()">
-    Toevoegen nieuwe activiteit
-  </button>
+    <button
+        class="btn btn-primary mt-2"
+        (click)="openFormActiviteitModal()"
+    >
+        Toevoegen nieuwe activiteit
+    </button>
 </div>
 
+
+
+
 <div class="table-responsive mt-2">
-  <table class="table table-striped table-sm">
-    <thead>
-      <tr>
-        <th>Naam</th>
-        <th>Beschrijving</th>
-        <th>Datum</th>
-        <th>Capaciteit</th>
-        <th>Prijs</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let activiteit of (activiteiten | async)">
-        <td>{{ activiteit.naam }}</td>
-        <td>{{ activiteit.beschrijving }}</td>
-        <td>{{ activiteit.datum }}</td>
-        <td>{{ activiteit.capaciteit }}</td>
-        <td>{{ activiteit.prijs | currency: "EUR" }}</td>
-        <td class="text-align: right">
-          <i
-            class="fas fa-edit mr-2"
-            placement="top"
-            ngbTooltip="Wijzigen"
-            (click)="openEditFormActiviteitModal(activiteit)"
-          ></i>
-          <i
-            class="fas fa-trash-alt mr-2"
-            placement="top"
-            ngbTooltip="Verwijderen"
-            (click)="verwijderActiviteit(activiteit)"
-          ></i>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+    <table class="table table-striped table-sm">
+        <thead>
+            <tr>
+                <th>Naam</th>
+                <th>Beschrijving</th>
+                <th>Datum</th>
+                <th>Capaciteit</th>
+                <th>Prijs</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let activiteit of (activiteiten | async)">
+                <td>{{ activiteit.naam }}</td>
+                <td>{{ activiteit.beschrijving }}</td>
+                <td>{{ activiteit.datum }}</td>
+                <td>{{ activiteit.capaciteit }}</td>
+                <td>
+                    {{ activiteit.prijs | currency: "EUR" }}
+                </td>
+                <td class="text-align: right">
+                    <i
+                        class="fas fa-edit mr-2"
+                        placement="top"
+                        ngbTooltip="Wijzigen"
+                        (click)="openEditFormActiviteitModal(activiteit)"
+                    ></i>
+                    <i
+                        class="fas fa-trash-alt mr-2"
+                        placement="top"
+                        ngbTooltip="Verwijderen"
+                        (click)="verwijderActiviteit(activiteit)"
+                    ></i>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
