--- a/frontend/src/app/managementportal/managementportal.component.html
+++ b/frontend/src/app/managementportal/managementportal.component.html
@@ -19,6 +19,7 @@
 
 
 
+
 <div class="container-fluid">
     <div class="row">
         <nav class="col-md-3 col-lg-2 d-none d-md-block bg-light sidebar">
@@ -110,7 +111,7 @@
                             Planning
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a
                             class="nav-link"
                             [routerLink]="['/managementportal/activiteiten/activiteit-reserveringen']"
@@ -118,10 +119,11 @@
                         >
                             Reserveringen
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
+
 
 
 
