--- a/frontend/src/app/managementportal/managementportal.component.html
+++ b/frontend/src/app/managementportal/managementportal.component.html
@@ -21,6 +21,7 @@
 
 
 
+
 <div class="container-fluid">
     <div class="row">
         <nav class="col-md-3 col-lg-2 d-none d-md-block bg-light sidebar">
@@ -103,7 +104,7 @@
                             Activiteiten
                         </a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a
                             class="nav-link"
                             [routerLink]="['/managementportal/activiteiten/activiteiten-planning']"
@@ -111,7 +112,7 @@
                         >
                             Planning
                         </a>
-                    </li> -->
+                    </li>
                     <li class="nav-item">
                         <a
                             class="nav-link"
@@ -124,6 +125,7 @@
                 </ul>
             </div>
         </nav>
+
 
 
 
