--- a/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamersbeschikbaar/form-kamersbeschikbaar.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamersbeschikbaar/form-kamersbeschikbaar.component.html
@@ -9,15 +9,12 @@
       <div class="container, form-row">
         <div class="form-group col-md-6">
               <label>Aankomst datum</label>
-              <input type="date" class="form-control" [min]="today" [value]="today" formControlName="datumvan"  />
+              <input type="date" class="form-control" [min]="today" [value]="today" (blur)="checkDate()" formControlName="datumvan" ngbAutofocus />
 
           </div>
           <div class="form-group col-md-6">
-
               <label>Vertrek datum</label>
-              <input type="date" class="form-control" [min]="kamerSearchForm.controls.datumvan.value" [value]="tomorrow" formControlName="datumtot" ngbAutofocus/>
-
-
+              <input type="date" class="form-control" [min]="kamerSearchForm.controls.datumvan.value" [value]="tomorrow" formControlName="datumtot" />
           </div>
         </div>
         <div class="container, form-row">
