--- a/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
@@ -14,7 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let gerecht of (gerechtenService.paginatedGerechten$ | async | sortgrid:field)">
+      <tr *ngFor="let gerecht of (gerechten$ | async | sortgrid:field)">
         <td><span class="handCursor" [routerLink]="[gerecht.id]">{{gerecht.naam}}</span></td>
         <td>{{gerecht.type}}</td>
         <td>{{gerecht.subtype}}</td>
@@ -27,13 +27,3 @@
       </tr>
     </tbody>
   </table>
-  <div class="d-flex justify-content-between">
-    <ngb-pagination [collectionSize]="gerechtenService.total$ | async" [(page)]="gerechtenService.page"
-      [pageSize]="gerechtenService.pageSize">
-    </ngb-pagination>
-    <select class="custom-select" name="pageSize" [(ngModel)]="gerechtenService.pageSize">
-      <option [ngValue]="5">5 per pagina</option>
-      <option [ngValue]="10">10 per pagina</option>
-      <option [ngValue]="20">20 per pagina</option>
-    </select>
-  </div>
