--- a/frontend/src/app/frontend/frontend.component.html
+++ b/frontend/src/app/frontend/frontend.component.html
@@ -9,9 +9,11 @@
     <a class="p-2 text-dark" [routerLink]="['/activiteiten']" routerLinkActive="active" >{{ siteLanguage.activities }}</a>
     <a class="p-2 text-dark" [routerLink]="['/contact']" routerLinkActive="active" >{{ siteLanguage.contact }}</a>
   </nav>
-  <input type="image" class="mr-md-3" src="assets/img/nederlands.png" alt="Nederlands" title="Nederlands" (click)="setLanguage('nl')">
-  <input type="image" class="mr-md-3" src="assets/img/english.png" alt="English" title="English" (click)="setLanguage('en')">
-  <input type="image" class="mr-md-3" src="assets/img/italiano.png" alt="Italiano" title="Italiano" (click)="setLanguage('it')">
+  <div *ngIf="multilanguage">
+    <input type="image" class="mr-md-3" src="assets/img/nederlands.png" alt="Nederlands" title="Nederlands" (click)="setLanguage('nl')">
+    <input type="image" class="mr-md-3" src="assets/img/english.png" alt="English" title="English" (click)="setLanguage('en')">
+    <input type="image" class="mr-md-3" src="assets/img/italiano.png" alt="Italiano" title="Italiano" (click)="setLanguage('it')">
+  </div>
   <span class="btn btn-outline-primary" [routerLink]="['/login']" routerLinkActive="active">{{ siteLanguage.login }}</span>
 </header>
 
