--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -1,30 +1,47 @@
 <div class="d-flex justify-content-end mt-2">
-<button class="btn btn-primary mt-2" (click)="openFormActiviteitResModal()">Nieuwe Reservering maken</button>
+    <button
+        class="btn btn-primary mt-2"
+        (click)="openFormActiviteitResModal()"
+    >
+        Nieuwe Reservering maken
+    </button>
 </div>
+
+
+
 
 <div class="table-responsive mt-2">
-  <table class="table table-striped table-sm">
-    <thead>
-      <tr>
-        <th>Activiteit</th>
-        <th>Datum</th>
-        <th>Emailadres gast</th>
-        <th>Aantal Personen</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let reservering of (reserveringen | async)">
-        <td>{{reservering.naamActiviteit}}</td>
-        <td>{{reservering.datum}}</td>
-        <td>{{reservering.emailGast}}</td>
-        <td>{{reservering.aantalPersonen}}</td>
-        <td class="text-right">
-          <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Wijzigen" (click)="openFormActiviteitResModal(reservering)"></i>
-          <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="verwijderActiviteitRes(reservering)"></i>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+    <table class="table table-striped table-sm">
+        <thead>
+            <tr>
+                <th>Activiteit</th>
+                <th>Datum</th>
+                <th>Emailadres gast</th>
+                <th>Aantal Personen</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let reservering of (reserveringen | async)">
+                <td>{{reservering.resid}}</td>
+                <td>planning.datum</td>
+                <td>{{reservering.emailGast}}</td>
+                <td>{{reservering.aantalPersonen}}</td>
+                <td class="text-right">
+                    <i
+                        class="fas fa-edit mr-2"
+                        placement="top"
+                        ngbTooltip="Wijzigen"
+                        (click)="openFormActiviteitResModal(reservering)"
+                    ></i>
+                    <i
+                        class="fas fa-trash-alt mr-2"
+                        placement="top"
+                        ngbTooltip="Verwijderen"
+                        (click)="verwijderActiviteitRes(reservering)"
+                    ></i>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
-
