--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
@@ -8,17 +8,15 @@
 </div>
 
 
-
-
 <div class="table-responsive mt-2">
     <table class="table table-striped table-sm">
         <thead>
             <tr>
                 <th>Naam</th>
                 <th>Beschrijving</th>
-                <th>Datum</th>
+                <!-- <th>Datum</th>
                 <th>Capaciteit</th>
-                <th>Prijs</th>
+                <th>Prijs</th> -->
                 <th></th>
             </tr>
         </thead>
@@ -26,11 +24,11 @@
             <tr *ngFor="let activiteit of (activiteiten | async)">
                 <td>{{ activiteit.naam }}</td>
                 <td>{{ activiteit.beschrijving }}</td>
-                <td>{{ activiteit.datum }}</td>
+                <!-- <td>{{ activiteit.datum }}</td>
                 <td>{{ activiteit.capaciteit }}</td>
                 <td>
                     {{ activiteit.prijs | currency: "EUR" }}
-                </td>
+                </td> -->
                 <td class="text-align: right">
                     <i
                         class="fas fa-edit mr-2"
