--- a/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
+++ b/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
@@ -12,19 +12,17 @@
         <div class="col">
           <div class="input-group">
             <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="aanvangsdatum" ngbDatepicker
-              #d="ngbDatepicker" [class.is-invalid]="aanvangstijd?.invalid && aanvangstijd?.touched" ngbAutofocus
-              [minDate]="currentDate">
+              #d="ngbDatepicker" ngbAutofocus [minDate]="currentDate">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+              <button class="btn btn-outline-secondary far fa-calendar-alt" (click)="d.toggle()" type="button"></button>
             </div>
           </div>
-          <small class="text-danger" [class.d-none]="aanvangstijd?.valid || aanvangstijd?.untouched">Vereist</small>
         </div>
         <div class="col">
-          <ngb-timepicker formControlName="aanvangstijd" [minuteStep]="15" [readonlyInputs]="true"></ngb-timepicker>
-          <small class="text-danger" [class.d-none]="aanvangstijd?.valid || aanvangstijd?.untouched">Vereist</small>
+          <ngb-timepicker formControlName="aanvangstijd" [minuteStep]="15"></ngb-timepicker>
         </div>
       </div>
+      <small class="text-danger" [class.d-none]="aanvangsdatum?.valid || aanvangsdatum?.untouched">Voer een geldige datum in</small>
     </div>
     <div class="form-group">
       <label>Aantal Personen</label>
@@ -46,6 +44,7 @@
       <small class="text-danger" [class.d-none]="telefoon?.valid || telefoon?.untouched">Vereist</small>
     </div>
   </form>
+  {{ tafelreserveringForm.value | json }}
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="submitForm()"
       [disabled]="tafelreserveringForm.invalid">Save</button>
