--- a/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
+++ b/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
@@ -12,7 +12,7 @@
         <div class="col">
           <div class="input-group">
             <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="aanvangsdatum" ngbDatepicker
-              #d="ngbDatepicker" ngbAutofocus [minDate]="currentDate">
+              #d="ngbDatepicker" ngbAutofocus [minDate]="minDate">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary far fa-calendar-alt" (click)="d.toggle()" type="button"></button>
             </div>
@@ -44,7 +44,6 @@
       <small class="text-danger" [class.d-none]="telefoon?.valid || telefoon?.untouched">Vereist</small>
     </div>
   </form>
-  {{ tafelreserveringForm.value | json }}
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="submitForm()"
       [disabled]="tafelreserveringForm.invalid">Save</button>
