--- a/frontend/src/app/managementportal/components/kamers/kamers.component.scss
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.scss
@@ -10,6 +10,9 @@
 .Noresultfound{
   color: red;
 }
+.infotext{
+  color: green;
+}
 
 /* .table-striped>tbody>tr:nth-child(odd)>td,
 .table-striped>tbody>tr:nth-child(odd)>th {
