--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -12,11 +12,12 @@
         <!--a href="/managementportal/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a-->
       </div>
   </div>
-
   <br />
+  <div class="infotext" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div>
   <table class="table table-striped table-sm">
     <thead>
     <tr>
+      <th *ngIf="showResButton">Select</th>
       <th (click)="clickColumnHandler('kamerNaam')">Kamernaam<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('kamerType')">Kamertype<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('kamerLigging')">Kamerligging<i class="fa fa-fw fa-sort"></i></th>
@@ -24,13 +25,18 @@
       <th (click)="clickColumnHandler('prijs')">Prijs<i class="fa fa-fw fa-sort"></i></th>
       <th></th>
       <!--th *ngIf="showResButton"></th-->
-
     </tr>
     </thead>
     <tbody>
     <div *ngIf="(kamers| async)?.length>0, then welkamers else geenKamers"></div>
     <ng-template #welkamers>
     <tr *ngFor="let kamer of (kamers | async | kamersfilter: show | sortgrid:field)">
+        <td *ngIf="showResButton">
+            <input type="checkbox" (click)="onSelectRoom(kamer)" data-toggle="toggle" data-size="small">
+          <!--div class="checkbox">
+            <label><input type="checkbox" value=""></label>
+          </div-->
+       </td>
         <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
