--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
@@ -23,7 +23,9 @@
                 <!-- {{ id: activiteitplanning.planid }} -->
                 <!-- {{ activiteit.naam }} {{ activiteitplanning.actdate}} {{ activiteitplanning.actprijs | currency: "EUR" }} -->
                 <!-- </td> -->
-                <td>{{ activiteitplanning.actid }}</td>
+                <td>
+                    {{ activiteitplanning.activiteit.naam }}
+                </td>
                 <td>{{ activiteitplanning.actdate }}</td>
                 <td>
                     {{ activiteitplanning.actprijs | currency: "EUR" }}
