--- a/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -1,58 +1,63 @@
 <div class="row mb-4">
-  <div class="col-lg-12">
-    <ngb-carousel>
-      <ng-template ngbSlide *ngFor="let activiteit of (activiteiten | async)">
-        <img
-          src="assets/img/{{ activiteit.thumb }}"
-          alt="Random first slide"
-          style="width:100%; height:100%; background:#777; color:#777;"
-        />
-        <div class="carousel-caption carousel-inner-text">
-          <h2>{{ activiteit.naam }}</h2>
-          <p>{{ activiteit.beschrijving }}</p>
-          <p>
-            <button class="btn btn-lg btn-primary">Aanmelden</button>
-          </p>
-        </div>
-      </ng-template>
-    </ngb-carousel>
-  </div>
+    <div class="col-lg-12">
+        <ngb-carousel>
+            <ng-template
+                ngbSlide
+                *ngFor="let activiteit of (activiteiten | async)"
+            >
+                <img
+                    src="assets/img/{{ activiteit.thumb }}"
+                    alt="Random first slide"
+                    style="width:100%; height:100%; background:#777; color:#777;"
+                >
+                <div class="carousel-caption carousel-inner-text">
+                    <h2>{{ activiteit.naam }}</h2>
+                    <p>{{ activiteit.beschrijving }}</p>
+                    <p>
+                        <button class="btn btn-lg btn-primary">Aanmelden</button>
+                    </p>
+                </div>
+            </ng-template>
+        </ngb-carousel>
+    </div>
 </div>
 
+
 <div class="table-responsive mt-2">
-  <table id="ml01" class="table table-striped table-sm" >
-    <thead>
-      <tr>
-        <th></th>
-        <th>Activiteit</th>
-       <th>Actie</th>
-        <th>Prijs</th>
-        <th>Capaciteit</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let activiteit of (activiteiten | async)">
-        <td><img src="assets/img/thumb_{{ activiteit.thumb }}" /></td>
-        <td>
-          <h4>{{ activiteit.naam }}</h4>
-          {{ activiteit.beschrijving }}
-        </td>
-        <td>
-<!--          {{ activiteit.datum }}<br/><br/>
--->
-          <p>
-            <button
-              type="button"
-              class="btn btn-primary btn-block btn-primary movelake"
-            >
-              Info en aanmelden
-            </button>
-          </p>
-        </td>
-        <td>{{ activiteit.prijs | currency: "EUR" }}</td>
-        <td>{{ activiteit.capaciteit }}</td>
-      </tr>
-    </tbody>
-  </table>
+    <table
+        id="ml01"
+        class="table table-striped table-sm"
+    >
+        <thead>
+            <tr>
+                <th></th>
+                <th>Activiteit</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let activiteit of (activiteiten | async)">
+                <td>
+                    <img src="assets/img/thumb_{{ activiteit.thumb }}">
+                </td>
+                <td>
+                    <h4>{{ activiteit.naam }}</h4>
+                    {{ activiteit.beschrijving }}
+                </td>
+                <td>
+                    <p>
+                        <button
+                            type="button"
+                            class="btn btn-primary btn-block btn-primary movelake"
+                        >
+                            Planning an aanmelden
+                        </button>
+                    </p>
+                </td>
+                <!-- <td>{{ activiteit.prijs | currency: "EUR" }}</td>
+        <td>{{ activiteit.capaciteit }}</td> -->
+            </tr>
+        </tbody>
+    </table>
 </div>
